--- a/sample.html
+++ b/sample.html
@@ -9,6 +9,9 @@
       <link href="style.css" rel="stylesheet" type="text/css">
       <link href="http://pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css" rel="stylesheet" type="text/css">
    </head>
+   
+<!-- Identity Information -->
+
    <body>
       <div class="panel panel-primary" style="margin-left: 15px; margin-right: 15px; margin-top:15px;">
          <div class="panel-heading">
@@ -23,7 +26,34 @@
                </div>
             </div>
          </div>
-         <div class="panel panel-default" style="margin-left: 15px; margin-right: 15px; margin-top:15px;">
+		</div> 
+		
+<!-- Biography -->
+		 
+         <div class="panel panel-default" style="margin-left: 15px; margin-right: 15px; ">
+            <div class="panel-heading">
+               <div class="container">
+                  <div class="row">
+                     <div class="col-md-12">
+                        <h2 class="text-center">About Me</h2>
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <div class="panel-body panel-default">
+               <div class="container">
+                  <div class="row">
+                     <div class="col-md-14">
+                        <p class="lead text-default">I am a Lecturer in Digital History at the Department of Politics, History and International Relations at Loughborough University. The main focus of my research and publication has been Scottish emigration, including both settlement communities and those who remained in Scotland, and I am particularly interested in the role of newspapers in public perceptions of demography and migration. </p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+		</div>	
+		
+<!-- Template 1: Full Altmetric Data -->
+		 
+         <div class="panel panel-default" style="margin-left: 15px; margin-right: 15px; margin-top:15px;margin-top: -25px;"">
             <div class="panel-heading">
                <div class="container">
                   <div class="row">
@@ -49,6 +79,9 @@
                </div>
             </div>
          </div>
+		 
+<!-- Template 2: Two Images -->
+		 
          <div class="panel panel-default" style="margin-left: 15px; margin-right: 15px; margin-top: -25px;">
             <div class="panel-heading">
                <div class="container">
@@ -78,6 +111,9 @@
                </div>
             </div>
          </div>
+		 
+<!-- Template 3: Donut and Image -->
+		 
          <div class="panel panel-default" style="margin-left: 15px; margin-right: 15px; margin-top: -25px;">
             <div class="panel-heading">
                <div class="container">
@@ -106,6 +142,7 @@
                   </div>
                </div>
             </div>
+			
          </div>
       </div>
    </body>
