Footer added and citations removed

--- a/sample.html
+++ b/sample.html
@@ -60,9 +60,6 @@
                      <div class="col-md-12">
                         <h2 class="text-center">The Role of the Sydney Gazette in the Creation of Australia in the Public Sphere</h2>
                      </div>
-                     <div class="col-md-12">
-                        <h4 style="color:999999;font-size:.85em;text-align:left;">Beals, M. H. “The Role of the Sydney Gazette in Scottish Perceptions of Australia, 1803-1842.” In <i>Historical Networks in the Book Trade.</i> London: Pickering & Chatto Publishers, 2014. <a style="color:999999;" href="http://dx.doi.org/10.6084/M9.FIGSHARE.944593" target="_blank">DOI: 10.6084/M9.FIGSHARE.944593</a></h4>
-                     </div>
                   </div>
                </div>
             </div>
@@ -88,9 +85,6 @@
                   <div class="row">
                      <div class="col-md-12">
                         <h2 class="text-center">Scissors and Paste, Edges and Nodes</h2>
-                     </div>
-                     <div class="col-md-12">
-                        <h4 style="color:999999;font-size:.85em;text-align:left;">Beals, M. H. “The Role of the Sydney Gazette in Scottish Perceptions of Australia, 1803-1842.” In <i>Historical Networks in the Book Trade.</i> London: Pickering & Chatto Publishers, 2014. <a style="color:999999;" href="http://dx.doi.org/10.6084/M9.FIGSHARE.944593" target="_blank">DOI: 10.6084/M9.FIGSHARE.944593</a></h4>
                      </div>
                   </div>
                </div>
@@ -121,9 +115,6 @@
                      <div class="col-md-12">
                         <h2 class="text-center">Rapunzel and the Ivory Tower: <br/>How Open Access Will Save the Humanities (from Themselves)</h2>
                      </div>
-                     <div class="col-md-12">
-                        <h4 style="color:999999;font-size:.85em;text-align:left;">Beals, M. H. “The Role of the Sydney Gazette in Scottish Perceptions of Australia, 1803-1842.” In <i>Historical Networks in the Book Trade.</i> London: Pickering & Chatto Publishers, 2014. <a style="color:999999;" href="http://dx.doi.org/10.6084/M9.FIGSHARE.944593" target="_blank">DOI: 10.6084/M9.FIGSHARE.944593</a></h4>
-                     </div>
                   </div>
                </div>
             </div>
@@ -138,6 +129,22 @@
                      </div>
                      <div class="col-md-2">
                         <a href="https://c2.staticflickr.com/6/5612/15567560315_fa15117bcc.jpg" targe="_blank"><img src="https://c2.staticflickr.com/6/5612/15567560315_fa15117bcc.jpg" class="img-responsive img-circle center-block" width="120px">
+                     </div>
+                  </div>
+               </div>
+            </div>
+	
+<!-- Footer Attribution -->
+	
+	    <div class="panel-footer panel-default">
+               <div class="container">
+                  <div class="row">
+                     <div class="col-md-2">
+                     </div>
+                     <div class="col-md-8">
+                        <p class="lead text-default" style="text-align:center;"><a style="color:999999;" href="https://github.com/njall/Orctrix/">Created by Ortrix.</a></p>
+                     </div>
+                     <div class="col-md-2">
                      </div>
                   </div>
                </div>
